# backup-driveGWS

./: .env.example  .gitignore  LICENSE
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  stack_deploy_sidecar.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  crypto.py  database.py  logging.py  mailbox_access.py  permissions_catalog.py  redis_client.py  security.py
backend/app/middleware/: security_headers.py
backend/app/models/: __init__.py  accounts.py  audit.py  base.py  enums.py  mailbox_delegation.py  notifications.py  restore.py  settings.py  tasks.py  users.py  vault_drive_delegation.py  webmail.py
backend/app/schemas/: __init__.py  accounts.py  auth.py  branding.py  host_ops.py  mail_purge.py  mailbox.py  restore.py  roles.py  setup.py  tasks.py  users.py  vault_drive_browser.py  webmail.py
backend/app/services/: __init__.py  (+42 more)
backend/migrations/: env.py
backend/scripts/: __init__.py  bootstrap_admin.py  reset_user_password.py  set_gw_imap_password.py
backend/tests/: test_drive_computers_folder.py  test_drive_incremental_plan.py  test_drive_retention.py  test_drive_vault_reuse.py  test_gmail_backup_progress.py  test_gyb_work_browser.py  test_health.py  test_mailbox_access.py  test_mailbox_browser_service.py  test_maildir_export_service.py  test_maildir_gyb_sqlite.py  test_models_metadata.py  test_rclone_drive_argv.py  test_rclone_gmail_vault_argv.py  test_rclone_mkdir_dest.py  test_security.py  test_settings_gmail_vault_env.py  test_shell_safe.py  test_vault_layout.py  test_vault_report_upload.py
(+145 files in other folders)
